--- a/classsix.html
+++ b/classsix.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="classsix.css">
 </head>
 <body>
-    <div class="parent another">
+    <div class="parent another class3 class4 ....">
         <div class="flex item1">1</div>
         <div class="flex item2">2</div>
         <div class="flex item3">3</div>
